# yci

./: Cargo.toml  README.md
schema/: interface-openvpn.yaml  service.yaml  system.yaml
src/: lib.rs  running_config.rs
src/running_config/: mod.rs  test.rs
