[package]
name = "yci"
version = "0.1.0"
authors = ["qiuchengxuan <qiuchengxuan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oas3 = "0.2"
hyper = "0.14"
hyperlocal = "0.8"
yaml-rust = "0.4"
http = "0.2"
serde = "1.0"
serde_yaml = "0.8"
serde_json = "1"

[dev-dependencies]
pretty_assertions = "*"
mockito = "*"
tokio-test = "*"

[features]
unix_socket = []
validate = []
